@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class Abrechnung {
        {static} + main()
    }
  }
  

  namespace  {
    class Angestellter {
        - ueberstunden : int
        + verdienstBerrechnen()
        ~ Angestellter()
        ~ Angestellter()
    }
  }
  

  namespace  {
    class Arbeiter {
        - arbeitsstunden : int
        - stundenlohn : double
        + Arbeiter()
        + verdienstBerrechnen()
        ~ Arbeiter()
    }
  }
  

  namespace  {
    class Maneger {
        - gewinnbeteiligung : double
        + verdienstBerrechnen()
        ~ Maneger()
        ~ Maneger()
    }
  }
  

  namespace  {
    class Mitarbeiter {
        # grundgehalt : int
        # kontonummer : int
        - name : String
        + Mitarbeiter()
        + Mitarbeiter()
        + getGrundgehalt()
        + getName()
        + setGrundgehalt()
        + setName()
        + verdienstBerrechnen()
    }
  }
  

  Angestellter -up-|> Mitarbeiter
  Arbeiter -up-|> Mitarbeiter
  Maneger -up-|> Mitarbeiter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
